2006-12-14  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_gtk2_rc_parse_dummy),
	(clearlooks_rc_style_parse), (clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters),
	(clearlooks_style_draw_box_gap), (clearlooks_style_draw_extension),
	(clearlooks_style_draw_handle), (clearlooks_style_draw_box),
	(clearlooks_style_init_from_rc), (clearlooks_style_copy),
	(clearlooks_style_draw_render_icon):
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_types.h:
	- Remove unused options, the engine now warns about their usage.
	- Also removed some commentted out code, and clarified a few
	comments.

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Remove options that don't have any effect.

2006-12-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h:
	- Remove arrow drawing code
	- Use buildin draw_tab, the difference is only minimal
	- Call gtk_paint_tab for the combobox arrow

2006-12-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_shadow):
	- Don't set shadow type to NONE if the detail is not one of the known
	ones. (Bug #385106, Carlos Garnacho Parro)

2006-12-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_rc_style.c:
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	* engines/clearlooks/src/clearlooks_types.h:
	- Added preliminary radius option. Still a lot of sanity checks and
	other things missing.
